# dokumenten-scanner-sortierung

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  constraints-build.txt  pyproject.toml  requirements-build.txt
.github/workflows/: ci.yml
installer/: installer.py  product.py  uninstall.ps1  windows_dialog.py
scripts/: build-release.ps1  prepare-tesseract-vendor.ps1  pyinstaller_tkinter_hook.py
src/: main.py  open_main_window.py
src/scanner_sorter/: __init__.py  app.py  config.py  models.py  processing.py  recognition.py  version_info.py  watcher.py  window_launcher.py
tests/: test_app.py  test_build_release.py  test_config.py  test_daily_logging.py  test_installer.py  test_processing.py  test_processor_integration.py  test_recognition.py  test_tesseract_vendor.py  test_uninstaller.py  test_version_info.py  test_watcher.py
tests/manual_samples/: README.md
