[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dokumenten-scanner-sortierung"
version = "0.1.9"
description = "Automatische Trennung und Benennung eingescannter Betriebsdokumente."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "PyMuPDF>=1.24",
    "pypdf>=5.0",
    "pytesseract>=0.3.10",
    "pystray>=0.19.5",
    "zxing-cpp>=2.2",
]

[project.scripts]
dokumentensortierer = "scanner_sorter.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
